k3s_cluster/base/private/monitoring/headlamp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: private
  labels:
    app: private-headlamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-headlamp
  template:
    metadata:
      labels:
        app: private-headlamp
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      serviceAccountName: serviceaccount
      containers:
        - name: headlamp
          image: ghcr.io/headlamp-k8s/headlamp:latest
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /headlamp/config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
