k3s_cluster/base/private/monitoring/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-headlamp
spec:
  type: ClusterIP
  selector:
    app: private-headlamp
  ports:
    - name: web
      protocol: TCP
      port: 4420
      targetPort: 8080
